# adventofcode-2021

./: Cargo.toml  README.md
aoc/: Cargo.toml
aoc/src/: main.rs
day01/: Cargo.toml
day01/src/: lib.rs
day02/: Cargo.toml
day02/src/: lib.rs
day03/: Cargo.toml
day03/src/: lib.rs
input/: day3_part1.txt
utils/: Cargo.toml
utils/src/: lib.rs
