[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
day01 = {path = "../day01"}
day02 = {path = "../day02"}
num_enum = "0.5.4"

